# snn-ctrl

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  env.py  policy.onnx  train.py  vis.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
gym_exps/: callbacks.py  configs.py  experiment.py  launch.py  test.py  train.py  wait.sh  wrappers.py
gym_exps/requirements/: base.txt  readme.md
gym_exps/wrappers/: __init__.py  single_precision.py
gymrat/: Makefile
gymrat/requirements/: base.txt  dev.txt
mapless_navi/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mapless_navi/launch/: gazebo.launch  main.launch  main.launch.py  robot_state_publisher.launch.py  spawn_goal.launch  spawn_turtlebot3.launch
mapless_navi/models/goal/: model.config  model.sdf
mapless_navi/models/square_enclosure/: model.config  model.sdf
mapless_navi/scripts/: policy.onnx  train.py  vis.py
mapless_navi/worlds/: cluttered.sdf  empty_square_enclosure.sdf  escape.sdf  maze.sdf
