<?xml version="1.0"?>
<package format="2">
  <name>mapless_navi</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <license>TODO</license>

  <maintainer email="sgmxu9@liverpool.ac.uk">Minghong Xu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>